# vega-pomodoro-log

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
examples/: sample-sessions.csv
scripts/: verify_pomodoro.py
src/vega_pomodoro_log/: __init__.py  cli.py
